# phoityne-vscode

./: README.md
debug-adapter/: Changelog.md  README.md  phoityne-vscode.cabal  stack.yaml
debug-adapter/app/: Main.hs
debug-adapter/app/Phoityne/: GHCi.hs
debug-adapter/app/Phoityne/GHCi/: Command.hs  Process.hs
debug-adapter/app/Phoityne/GHCi/IO/: Command.hs  Process.hs
debug-adapter/app/Phoityne/VSCode/: Argument.hs  Constant.hs  Control.hs  Core.hs  Main.hs  Type.hs  Utility.hs
debug-adapter/app/Phoityne/VSCode/IO/: Control.hs  Core.hs  Main.hs  Utility.hs
debug-adapter/app/Phoityne/VSCode/TH/: BreakpointJSON.hs  ColumnDescriptorJSON.hs  CompletionsArgumentsJSON.hs  CompletionsItemJSON.hs  CompletionsRequestJSON.hs  CompletionsResponseBodyJSON.hs  CompletionsResponseJSON.hs  ConfigurationDoneRequestJSON.hs  ConfigurationDoneResponseJSON.hs  ContinueArgumentsJSON.hs  ContinueRequestJSON.hs  ContinueResponseJSON.hs  DisconnectArgumentsJSON.hs  DisconnectRequestJSON.hs  DisconnectResponseJSON.hs  ErrorResponseBodyJSON.hs  ErrorResponseJSON.hs  EvaluateArgumentsJSON.hs  EvaluateBodyJSON.hs  EvaluateRequestJSON.hs  EvaluateResponseJSON.hs  ExceptionBreakpointsFilterJSON.hs  ExitedEventBodyJSON.hs  ExitedEventJSON.hs  FunctionBreakpointJSON.hs  InitializeRequestArgumentsJSON.hs  InitializeRequestJSON.hs  InitializeResponseCapabilitesJSON.hs  InitializeResponseCapabilitiesJSON.hs  InitializeResponseJSON.hs  InitializedEventJSON.hs  LaunchRequestArgumentsJSON.hs  LaunchRequestJSON.hs  LaunchResponseJSON.hs  MessageJSON.hs  ModuleJSON.hs  ModulesArgumentsJSON.hs  ModulesRequestJSON.hs  ModulesResponseBodyJSON.hs  ModulesResponseJSON.hs  (+59 more)
vscode-extension/: README.md  package.json  phoityne-vscode.bat  phoityne-vscode.sh
